# ChangeLog for app-editors/emacs
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs/ChangeLog,v 1.304 2009/02/22 17:27:23 ulm Exp $

  22 Feb 2009; Ulrich Mueller <ulm@gentoo.org> -emacs-18.59-r5.ebuild:
  Remove old.

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> emacs-18.59-r6.ebuild:
  x86 stable wrt #259916

  17 Feb 2009; Ulrich Mueller <ulm@gentoo.org> emacs-22.3-r1.ebuild:
  Prefer aspell over ispell, following upstream.

  06 Feb 2009; Ulrich Mueller <ulm@gentoo.org> -emacs-22.3.ebuild:
  Remove old.

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> emacs-22.3-r1.ebuild:
  Stable for HPPA (bug #256382).

  05 Feb 2009; Raúl Porcel <armin76@gentoo.org> emacs-22.3-r1.ebuild:
  arm/ia64/s390/sh stable wrt #256382

  01 Feb 2009; Markus Meier <maekke@gentoo.org> emacs-22.3-r1.ebuild:
  x86 stable, bug #256382

  01 Feb 2009; nixnut <nixnut@gentoo.org> emacs-22.3-r1.ebuild:
  ppc stable #256382

  01 Feb 2009; Tobias Klausmann <klausman@gentoo.org> emacs-22.3-r1.ebuild:
  Stable on alpha, bug #256382

  26 Jan 2009; Brent Baude <ranger@gentoo.org> emacs-22.3-r1.ebuild:
  stable ppc64, bug 256382

  26 Jan 2009; Tiago Cunha <tcunha@gentoo.org> emacs-22.3-r1.ebuild:
  stable amd64, bug 256382

  26 Jan 2009; Ferris McCormick <fmccor@gentoo.org> emacs-22.3-r1.ebuild:
  Sparc stable, Bug #256382 (been around some time now).

*emacs-18.59-r6 (23 Jan 2009)

  23 Jan 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-18.59-r6.ebuild:
  Substitute the built_with_use check for libX11 by a USE dependency;
  therefore, change EAPI to 2.

  24 Dec 2008; Ulrich Mueller <ulm@gentoo.org>
  -files/emacs-22.1-freebsd-sparc.patch,
  -files/emacs-22.1-vcdiff-tmp-race.patch,
  -files/emacs-22.2-fast-lock.patch, -files/emacs-22.2-heimdal-gentoo.patch,
  -files/emacs-22.2-python-nopwd.patch, -emacs-21.4-r15.ebuild,
  -emacs-22.2-r3.ebuild:
  Remove old.
