@@ -15,12 +15,13 @@ DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SH
 EBUILD emacs-18.59-r6.ebuild 2516 RMD160 eec73e8fcf1462b945f9414a7db44268961eb7a0 SHA1 050566fc795050ce3609aec693e34217fabd5334 SHA256 92024b0574b11ea073e13cd92c9a652884fed2e817d7d66a5adcc463d1dcd76f
 EBUILD emacs-21.4-r17.ebuild 5436 RMD160 3dff8243b2a106816e828c88d9c51bb5c482305e SHA1 e6875cdea8a82f643255082936f828a1c0df781d SHA256 c1054740d9cde10d87a4ed53b1d00a0e76b7f7a10f4d6d8674557b3fae5ada45
 EBUILD emacs-22.3-r1.ebuild 8037 RMD160 2c09bc9892420361100b5afc8fdf7eb52bd1a5ea SHA1 d56b43f526eb798efc5d8a9fecfecf2d6710839a SHA256 42679ab77af9444cdc47ce51dd9ccb158efd5ca7c885764e0fb7c85a9b91f159
-MISC ChangeLog 43705 RMD160 48d3e29ebd68e46b872cf169be566eae65528f51 SHA1 5bc88f33b27be27b207940b449d0fff69c74101c SHA256 a995398a6168c23394484e8031d1ce2f84fb8757a1c70702baab8b7004769986
+EBUILD emacs-22.3-r2.ebuild 8050 RMD160 58b506face8b8eef384942637730dc64e27ee4f3 SHA1 4106c9fd9fddad287d2808ee32a5988ea06b465e SHA256 a717baa8a9a6a86005ee5069f73e396ba1319a0ce34da4093962d75079090c5a
+MISC ChangeLog 43874 RMD160 9987a771d729ebbff4acf48b4fb99bdd913353a5 SHA1 a480e75eff8bf94612c2084ac102ff5b005ebb79 SHA256 6ee22d8bb32fdb1a6a6fae64caeb23ef12a39e1bae33abb97168a9444f223ee9
 MISC metadata.xml 1652 RMD160 d5b841ffd970ae6338f01b56bc354004a78a13e8 SHA1 3f19193ed03a37bc67644966c839ea738b21c976 SHA256 fa53ed0bd63c3dd37877f11aa0ac7e3811da9db6c90437176ab60d76329f0cd7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (GNU/Linux)
 
-iEYEARECAAYFAkmhi0cACgkQOeoy/oIi7uwUtQCgraBD9GkY8I3I78M/6pQJhKkd
-wXgAoOevm2Uc4oBnI8eWLuOAsOaD42a4
-=6m28
+iEUEARECAAYFAkmpewcACgkQOeoy/oIi7uzH9wCYwlTE1BJbKP+7xyTmK0/iT4S+
+EwCgnhHw1soQ2xRsaWD7UBZYjiBrK30=
+=fyWj
 -----END PGP SIGNATURE-----
