@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs/ChangeLog,v 1.304 2009/02/22 17:27:23 ulm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs/ChangeLog,v 1.305 2009/02/28 17:56:09 ulm Exp $
+
+*emacs-22.3-r2 (28 Feb 2009)
+
+  28 Feb 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-22.3-r2.ebuild:
+  IUSE default for xpm, SLOT dependency for gtk+; change EAPI to 2.
 
   22 Feb 2009; Ulrich Mueller <ulm@gentoo.org> -emacs-18.59-r5.ebuild:
   Remove old.
